[package]
name = "awsim-iam"
description = "AWS IAM emulator for AWSim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
awsim-core = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
