[package]
name = "awsim-ses"
description = "AWS SES v2 emulator for AWSim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
awsim-core = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }
