[package]
name = "awsim-sns"
description = "AWS SNS emulator for AWSim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
awsim-core = { workspace = true }
awsim-iam-policy = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
