[package]
name = "awsim-sqs"
description = "AWS SQS emulator for AWSim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
awsim-core = { workspace = true }
awsim-iam-policy = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
md-5 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
