[package]
name = "awsim-sts"
description = "AWS STS emulator for AWSim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
awsim-core = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
