[package]
name = "awsim"
description = "AWSim — a fully offline, free AWS development environment"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "awsim"
path = "src/main.rs"

[dependencies]
awsim-apigateway = { workspace = true }
awsim-cloudformation = { workspace = true }
awsim-cloudwatch-logs = { workspace = true }
awsim-cognito = { workspace = true }
awsim-core = { workspace = true }
awsim-dynamodb = { workspace = true }
awsim-ec2 = { workspace = true }
awsim-ecr = { workspace = true }
awsim-ecs = { workspace = true }
awsim-kinesis = { workspace = true }
awsim-eventbridge = { workspace = true }
awsim-iam = { workspace = true }
awsim-kms = { workspace = true }
awsim-lambda = { workspace = true }
awsim-secretsmanager = { workspace = true }
awsim-s3 = { workspace = true }
awsim-ses = { workspace = true }
awsim-sns = { workspace = true }
awsim-sqs = { workspace = true }
awsim-ssm = { workspace = true }
awsim-sts = { workspace = true }
awsim-stepfunctions = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
